@@ -13,6 +13,7 @@ v 2.6
 
 user-visible CHANGES:
 + introduced dropZeroDensity argument to ML estimators 
++ arguments panel.first, panel.last for plot-methods can now be lists
   
 GENERAL ENHANCEMENTS:
 
